<resources>
    <string name="app_name">Бюджетный мониторинг</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">Добавить задание</string>
    <string name="photo">Фото</string>
    <string name="video">Видео</string>
    <string name="audio">Аудио</string>
    <string name="task_text">Опишите задание</string>
    <string name="choose_attachement_type">Выберите тип приложения</string>
    <string name="choose_location">Укажите расположение</string>
    <string name="done">Готово</string>
    <string name="close_tender">Завершить тендер</string>
    <string name="tender_closed">Тендер завершен</string>
    <string name="accept_tender">Взяться за тендер</string>
    <string name="tender_accepted">Тендер принят</string>
    <string name="add_task_info">Добавить информацию</string>
    <string name="deny_tender">Отказаться от тендера</string>
    <string name="send">Отправить</string>
    <string name="select_picture">Выберите изображение</string>
    <string name="upload_finished">Загрузка завершена</string>
    <string name="error">Ошибка</string>
    <string name="log_out">Выйти</string>
    <string name="yout_signed_out">Вы вышли из аккаунта</string>
    <string name="title_activity_maps">Map</string>
    <string name="filter">Фильтр</string>
    <string name="map">Карта</string>
    <string name="title_activity_maps_tasks">Map</string>
    <string name="search">Поиск</string>
    <string name="enter_words_to_search">Введите слова для поиска через запятую</string>
    <string name="cancel">Отмена</string>
    <string name="no_such_tender">Тендер не найден</string>
    <string name="open_tender_page">Показать тендер</string>
    <string name="loading_tender">Загрузка тендера</string>
    <string name="nothing_found">Ничего не найдно</string>
    <string name="task_for_moderator">Задание на модерации</string>
    <string name="publish">Опубликовать</string>
    <string name="task_is_published">Задание опубликовано</string>
    <string name="moderate">Отозвать</string>
    <string name="task_sent_to_moderator">Задание отправлено на модерацию</string>
    <string name="remove_task">Удалить задание</string>
    <string name="task_removed">Задание удалено</string>
    <string name="edit">Редактировать</string>
    <string name="ready">Готово</string>
    <string name="changes_applied">Изменения сохранены</string>
    <string name="title_activity_tasks_map">Map</string>
    <string name="added">Добавлено</string>
    <string name="open_tender">Открыть тендер</string>
    <string name="tender_opened">Тендер открыт</string>
    <string name="delete_tender_work">Удалить работу</string>
    <string name="are_you_sure">Вы уверены, что хотите удалить работу? Это действие нельзя отменить</string>
    <string name="work_removed">Работа удалена</string>
    <string name="delete">Удалить</string>
    <string name="filter_by_work_presence">Фильтрация по наличию работ</string>
    <string name="tasks">Задания</string>
    <string name="tender_saved">Тендер сохранен</string>
    <string name="tender_added_to_favorites">Тендер добавлен в избранные</string>
    <string name="tender_removed_from_favorites">Тендер удален из избранных</string>
    <string name="loading_failed">Загрузка не удалась</string>
    <string name="task_for_tender">Задание к тендеру №:</string>
    <string name="tenders_with_work">Тендеры с работами</string>
    <string name="search_tenders_with_tasks">Тендеры с заданиями</string>
    <string name="enter_words">Введите слово для поиска</string>
    <string name="region">Регион</string>
    <string name="procuring_entity">Закупающая организация</string>
    <string name="procurement_object">Закупка</string>
</resources>
