<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddTaskActivity">

    <EditText
        android:id="@+id/add_task_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_text"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_edit_text"
        android:inputType="textMultiLine"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="@dimen/horizontal_padding"
        android:paddingEnd="@dimen/horizontal_padding"
        android:text="@string/choose_location" />

    <ImageView
        android:id="@+id/add_task_location_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_location_black_48dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="@dimen/horizontal_padding"
        android:paddingEnd="@dimen/horizontal_padding"
        android:text="@string/choose_attachement_type" />


    <RadioButton
        android:id="@+id/photo_radio_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo" />

    <RadioButton
        android:id="@+id/video_radio_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video" />

    <RadioButton
        android:id="@+id/audion_radio_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audio" />


</LinearLayout>